# codeql

./: .gitignore  .gitmodules  .lgtm.yml  action.yml  lgtm.yml  main.go  package-lock.json  package.json
.github/workflows/: amazon-cognito-js.yml  codeql-end-to-end.yml  codeql-with-docker.yml  codeql-with-post.yml  codeql-with-two-actions.yml  commons-io-maven.yml  csv-coverage-metrics.yml  end-to-end-amazon-cognito-js.yml  gcc.yml  git-make.yml  post-comment.yml  qhelp-pr-preview.yml  ql-for-ql-build.yml  ql-for-ql-dataset_measure.yml  ql-for-ql-tests.yml  smartsql-csharp.yml  test.yml
__tests__/: main.test.ts
codeql/: action.yml
codeql-main/: action.yml
codeql-self-contained/: action.yml
codeql-setup/: action.yml
codeql/finish/: action.yml
codeql/init/: action.yml
docker/: Dockerfile
lib/: all-in-one.js  end-to-end.js  finalize-db.js  setup-codeql.js  setup-tools.js  setup-tracer.js  tracer-env.js
ql/buramu/: Cargo.toml
ql/extractor/: Cargo.toml
ruby/extractor/: Cargo.toml
ruby/generator/: Cargo.toml
ruby/ql/lib/: qlpack.yml
ruby/ql/lib/codeql/: Locations.qll
ruby/ql/lib/codeql/files/: FileSystem.qll
rust/: .generated.list  schema.py
rust/ql/: .generated.list  .gitattributes
rust/ql/lib/: rust.dbscheme
rust/schema/: annotations.py
setup-codeql/: action.yml
shared/util/: qlpack.yml
shared/util/codeql/util/: FileSystem.qll  Locations.qll
src/: all-in-one.ts  docker-compiler-settings  end-to-end.ts  finalize-db.ts  inject-tracer.ps1  replace-docker.sh  setup-codeql.ts  setup-tools.ts  setup-tracer.ts  tracer-env.ts
(+14 files in other folders)
