[package]
name = "ruby-generator"
version = "0.1.0"
authors = ["GitHub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
node-types = { path = "../node-types" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tree-sitter-embedded-template = { git = "https://github.com/aibaars/tree-sitter-embedded-template.git", rev = "19727ebfd5d12f1f65940cb1330df5cd9f3ecc3f" }
tree-sitter-ruby = { git = "https://github.com/aibaars/tree-sitter-ruby.git", rev = "b4b8ebfeda935059a615dbd6cec28baf196a17d1" }
